# DictaMeal

./: .gitignore  LICENSE  docker-compose.yml  logs.txt  logs_utf8.txt  services_from_container.py  test_search.py
backend/: Dockerfile  endpoints.py  main.py  models.py  pyproject.toml  recipes.db  services.py  test_fix.py
frontend/: build_log.txt  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: AudioRecorder.vue  RecipeDetail.vue  RecipeForm.vue  RecipeList.vue
frontend/src/composables/: useAudioRecording.js
